# PolySURF

./: Cargo.toml  README.md
1_mofid_to_rust/: Cargo.toml  all.txt  allid.txt  data
1_mofid_to_rust/OOLD/: CMakeLists.txt  README.md
1_mofid_to_rust/OOLD/old/: main.rs
1_mofid_to_rust/src/: geometry.rs  lib.rs  tools.rs  types.rs
A_sample_inputs/: 2.cif  manual.cif  mgo.cif
B_sample_outputs/: slab_1_0_0.cif  slab_1_1_1.cif  slab_214.cif  slab_4_3_1.cif  slab_output.cif  slab_output_linker.cif
src/: lib.rs  main.rs
src/analysis/: mod.rs  topology.rs
src/chemistry/: mod.rs  tagging.rs
src/core/: connectivity.rs  mod.rs  structure.rs
src/io/: parser.rs  writer.rs
src/math/: integer_basis.rs  lll.rs  mod.rs
src/synthesis/: builder.rs  ionic.rs  mod.rs  population.rs
tests/: integration_tests.rs
