[package]
name = "crystal_surface_generator"
version = "0.4.0"
edition = "2021"

[dependencies]
nalgebra = "0.32"
petgraph = "0.6"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

mofid_rust = { path = "./1_mofid_to_rust" } # Adjust path relative to your workspace
glob = "0.3"
