[package]
name = "mofid_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
regex = "1.10"
wait-timeout = "0.2"
lazy_static = "1.4"
which = "6.0"
tempfile = "3.8"

nalgebra = "0.32" 
glob = "0.3" # To find the generated xyz/mol files
thiserror = "1.0"

[profile.release]
strip = true           # Automatically strip symbols from the binary.
opt-level = "z"        # Optimize for size.
lto = true             # Enable Link Time Optimization (removes dead code).
codegen-units = 1      # Maximize size reduction optimization (slower build time).
panic = "abort"        # Removes unwinding logic (makes crashes slightly less pretty but smaller).
